--- a/clustering_main_trans_g12.ipynb
+++ b/clustering_main_trans_g12.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNY+Gilmo6WK2o7Ir3LeJ24",
+      "authorship_tag": "ABX9TyOZ6p+IhYpwC1Y5hheeMj2Y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1190,39 +1190,355 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "X = scaled_df_clean[['AssetID_8312', 'AssetID_8313']]\n",
+        "\n",
+        "best_score = -1\n",
+        "best_params = {'eps': None, 'min_samples': None}\n",
+        "\n",
+        "# محدوده پارامترها برای بررسی\n",
+        "eps_values = np.arange(0.3, 1.2, 0.1)\n",
+        "min_samples_values = range(3, 10)\n",
+        "\n",
+        "# حلقه بررسی ترکیب‌های مختلف\n",
+        "for eps in eps_values:\n",
+        "    for min_samples in min_samples_values:\n",
+        "        dbscan = DBSCAN(eps=eps, min_samples=min_samples)\n",
+        "        labels = dbscan.fit_predict(X)\n",
+        "\n",
+        "        # حذف نقاط پرت (برچسب -1)\n",
+        "        mask = labels != -1\n",
+        "        if len(set(labels[mask])) < 2:\n",
+        "            continue  # نیاز به حداقل دو خوشه برای محاسبه سیلوئت\n",
+        "\n",
+        "        score = silhouette_score(X[mask], labels[mask])\n",
+        "        print(f\"eps={eps:.2f}, min_samples={min_samples}, silhouette={score:.4f}\")\n",
+        "\n",
+        "        if score > best_score:\n",
+        "            best_score = score\n",
+        "            best_params['eps'] = eps\n",
+        "            best_params['min_samples'] = min_samples\n",
+        "\n",
+        "print(\"\\n✅ بهترین پارامترها:\")\n",
+        "print(f\"eps = {best_params['eps']:.2f}\")\n",
+        "print(f\"min_samples = {best_params['min_samples']}\")\n",
+        "print(f\"بهترین امتیاز سیلوئت = {best_score:.4f}\")\n"
+      ],
       "metadata": {
-        "id": "6n9kLXDY-BvI"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6n9kLXDY-BvI",
+        "outputId": "23918617-add5-4e3d-c4c6-c58b4b2e1225"
       },
-      "execution_count": 295,
-      "outputs": []
+      "execution_count": 296,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "eps=0.30, min_samples=3, silhouette=0.1393\n",
+            "eps=0.30, min_samples=4, silhouette=0.8929\n",
+            "eps=0.30, min_samples=5, silhouette=0.8930\n",
+            "eps=0.30, min_samples=6, silhouette=0.8906\n",
+            "eps=0.30, min_samples=7, silhouette=0.8908\n",
+            "eps=0.30, min_samples=8, silhouette=0.8867\n",
+            "eps=0.40, min_samples=3, silhouette=0.3097\n",
+            "eps=0.40, min_samples=4, silhouette=0.8966\n",
+            "eps=0.40, min_samples=5, silhouette=0.8966\n",
+            "eps=0.40, min_samples=6, silhouette=0.8909\n",
+            "eps=0.40, min_samples=7, silhouette=0.8913\n",
+            "eps=0.40, min_samples=8, silhouette=0.8968\n",
+            "eps=0.40, min_samples=9, silhouette=0.8951\n",
+            "eps=0.50, min_samples=3, silhouette=0.7883\n",
+            "eps=0.50, min_samples=4, silhouette=0.8962\n",
+            "eps=0.50, min_samples=5, silhouette=0.8962\n",
+            "eps=0.50, min_samples=6, silhouette=0.8963\n",
+            "eps=0.50, min_samples=7, silhouette=0.8982\n",
+            "eps=0.50, min_samples=8, silhouette=0.8988\n",
+            "eps=0.50, min_samples=9, silhouette=0.8959\n",
+            "eps=0.60, min_samples=3, silhouette=0.7880\n",
+            "eps=0.60, min_samples=4, silhouette=0.8964\n",
+            "eps=0.60, min_samples=5, silhouette=0.8964\n",
+            "eps=0.60, min_samples=6, silhouette=0.8967\n",
+            "eps=0.60, min_samples=7, silhouette=0.8979\n",
+            "eps=0.60, min_samples=8, silhouette=0.8974\n",
+            "eps=0.60, min_samples=9, silhouette=0.8987\n",
+            "eps=0.70, min_samples=3, silhouette=0.7880\n",
+            "eps=0.70, min_samples=4, silhouette=0.8964\n",
+            "eps=0.70, min_samples=5, silhouette=0.8964\n",
+            "eps=0.70, min_samples=6, silhouette=0.8964\n",
+            "eps=0.70, min_samples=7, silhouette=0.8967\n",
+            "eps=0.70, min_samples=8, silhouette=0.8967\n",
+            "eps=0.70, min_samples=9, silhouette=0.8967\n",
+            "eps=0.80, min_samples=3, silhouette=0.7880\n",
+            "eps=0.80, min_samples=4, silhouette=0.8964\n",
+            "eps=0.80, min_samples=5, silhouette=0.8964\n",
+            "eps=0.80, min_samples=6, silhouette=0.8964\n",
+            "eps=0.80, min_samples=7, silhouette=0.8964\n",
+            "eps=0.80, min_samples=8, silhouette=0.8964\n",
+            "eps=0.80, min_samples=9, silhouette=0.8964\n",
+            "eps=0.90, min_samples=3, silhouette=0.8950\n",
+            "eps=0.90, min_samples=4, silhouette=0.8950\n",
+            "eps=0.90, min_samples=5, silhouette=0.8962\n",
+            "eps=0.90, min_samples=6, silhouette=0.8962\n",
+            "eps=0.90, min_samples=7, silhouette=0.8962\n",
+            "eps=0.90, min_samples=8, silhouette=0.8962\n",
+            "eps=0.90, min_samples=9, silhouette=0.8962\n",
+            "eps=1.00, min_samples=3, silhouette=0.8950\n",
+            "eps=1.00, min_samples=4, silhouette=0.8950\n",
+            "eps=1.00, min_samples=5, silhouette=0.8959\n",
+            "eps=1.00, min_samples=6, silhouette=0.8962\n",
+            "eps=1.00, min_samples=7, silhouette=0.8962\n",
+            "eps=1.00, min_samples=8, silhouette=0.8962\n",
+            "eps=1.00, min_samples=9, silhouette=0.8962\n",
+            "eps=1.10, min_samples=3, silhouette=0.8941\n",
+            "eps=1.10, min_samples=4, silhouette=0.8941\n",
+            "eps=1.10, min_samples=5, silhouette=0.8949\n",
+            "eps=1.10, min_samples=6, silhouette=0.8949\n",
+            "eps=1.10, min_samples=7, silhouette=0.8953\n",
+            "eps=1.10, min_samples=8, silhouette=0.8953\n",
+            "eps=1.10, min_samples=9, silhouette=0.8953\n",
+            "\n",
+            "✅ بهترین پارامترها:\n",
+            "eps = 0.50\n",
+            "min_samples = 8\n",
+            "بهترین امتیاز سیلوئت = 0.8988\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from sklearn.cluster import KMeans\n",
+        "from sklearn.metrics import silhouette_score\n",
+        "import numpy as np\n",
+        "\n",
+        "X = scaled_df_clean[['AssetID_8312', 'AssetID_8313']]\n",
+        "\n",
+        "best_score = -1\n",
+        "best_k = None\n",
+        "\n",
+        "# محدوده تعداد خوشه‌ها برای بررسی\n",
+        "k_range = range(2, 11)\n",
+        "\n",
+        "for k in k_range:\n",
+        "    kmeans = KMeans(n_clusters=k, random_state=42)\n",
+        "    labels = kmeans.fit_predict(X)\n",
+        "\n",
+        "    score = silhouette_score(X, labels)\n",
+        "    print(f\"k={k}, silhouette={score:.4f}\")\n",
+        "\n",
+        "    if score > best_score:\n",
+        "        best_score = score\n",
+        "        best_k = k\n",
+        "\n",
+        "print(\"\\n✅ بهترین تعداد خوشه:\")\n",
+        "print(f\"k = {best_k}\")\n",
+        "print(f\"بهترین امتیاز سیلوئت = {best_score:.4f}\")\n"
+      ],
       "metadata": {
-        "id": "bGjTzDNJ-ByM"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bGjTzDNJ-ByM",
+        "outputId": "ecfd29dc-f20a-44a4-9560-b65ccd4cd202"
       },
-      "execution_count": 295,
-      "outputs": []
+      "execution_count": 297,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "k=2, silhouette=0.8917\n",
+            "k=3, silhouette=0.5811\n",
+            "k=4, silhouette=0.5255\n",
+            "k=5, silhouette=0.4746\n",
+            "k=6, silhouette=0.4691\n",
+            "k=7, silhouette=0.4616\n",
+            "k=8, silhouette=0.4590\n",
+            "k=9, silhouette=0.4570\n",
+            "k=10, silhouette=0.4260\n",
+            "\n",
+            "✅ بهترین تعداد خوشه:\n",
+            "k = 2\n",
+            "بهترین امتیاز سیلوئت = 0.8917\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from sklearn.cluster import AgglomerativeClustering\n",
+        "from sklearn.metrics import silhouette_score\n",
+        "import numpy as np\n",
+        "\n",
+        "X = scaled_df_clean[['AssetID_8312', 'AssetID_8313']]\n",
+        "\n",
+        "best_score = -1\n",
+        "best_k = None\n",
+        "\n",
+        "# محدوده تعداد خوشه‌ها برای بررسی\n",
+        "k_range = range(2, 11)\n",
+        "\n",
+        "for k in k_range:\n",
+        "    agglo = AgglomerativeClustering(n_clusters=k)\n",
+        "    labels = agglo.fit_predict(X)\n",
+        "\n",
+        "    score = silhouette_score(X, labels)\n",
+        "    print(f\"k={k}, silhouette={score:.4f}\")\n",
+        "\n",
+        "    if score > best_score:\n",
+        "        best_score = score\n",
+        "        best_k = k\n",
+        "\n",
+        "print(\"\\n✅ بهترین تعداد خوشه:\")\n",
+        "print(f\"k = {best_k}\")\n",
+        "print(f\"بهترین امتیاز سیلوئت = {best_score:.4f}\")\n"
+      ],
       "metadata": {
-        "id": "9ntxUC9Q-B1K"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9ntxUC9Q-B1K",
+        "outputId": "1efb428b-7485-44dc-b420-46c3ea4e4662"
       },
-      "execution_count": 295,
-      "outputs": []
+      "execution_count": 298,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "k=2, silhouette=0.8936\n",
+            "k=3, silhouette=0.5680\n",
+            "k=4, silhouette=0.5147\n",
+            "k=5, silhouette=0.4723\n",
+            "k=6, silhouette=0.4756\n",
+            "k=7, silhouette=0.4623\n",
+            "k=8, silhouette=0.4586\n",
+            "k=9, silhouette=0.4268\n",
+            "k=10, silhouette=0.4244\n",
+            "\n",
+            "✅ بهترین تعداد خوشه:\n",
+            "k = 2\n",
+            "بهترین امتیاز سیلوئت = 0.8936\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from sklearn.ensemble import IsolationForest\n",
+        "import numpy as np\n",
+        "\n",
+        "X = scaled_df_clean[['AssetID_8312', 'AssetID_8313']]\n",
+        "\n",
+        "best_outlier_count = -1\n",
+        "best_params = {'contamination': None, 'n_estimators': None}\n",
+        "\n",
+        "# محدوده پارامترها\n",
+        "contamination_values = np.arange(0.01, 0.2, 0.01)\n",
+        "n_estimators_values = [50, 100, 150]\n",
+        "\n",
+        "for contamination in contamination_values:\n",
+        "    for n_estimators in n_estimators_values:\n",
+        "        iso = IsolationForest(contamination=contamination, n_estimators=n_estimators, random_state=42)\n",
+        "        preds = iso.fit_predict(X)\n",
+        "\n",
+        "        outliers = np.sum(preds == -1)\n",
+        "        print(f\"contamination={contamination:.2f}, n_estimators={n_estimators}, outliers={outliers}\")\n",
+        "\n",
+        "        if outliers > best_outlier_count:\n",
+        "            best_outlier_count = outliers\n",
+        "            best_params['contamination'] = contamination\n",
+        "            best_params['n_estimators'] = n_estimators\n",
+        "\n",
+        "print(\"\\n✅ بهترین پارامترها برای بیشترین نقاط پرت:\")\n",
+        "print(f\"contamination = {best_params['contamination']:.2f}\")\n",
+        "print(f\"n_estimators = {best_params['n_estimators']}\")\n",
+        "print(f\"تعداد نقاط پرت شناسایی‌شده = {best_outlier_count}\")\n"
+      ],
       "metadata": {
-        "id": "9DMJvmM7-B4J"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9DMJvmM7-B4J",
+        "outputId": "a5941084-7775-4d7c-e270-7500c70dd9d3"
       },
-      "execution_count": 295,
-      "outputs": []
+      "execution_count": 299,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "contamination=0.01, n_estimators=50, outliers=32\n",
+            "contamination=0.01, n_estimators=100, outliers=24\n",
+            "contamination=0.01, n_estimators=150, outliers=31\n",
+            "contamination=0.02, n_estimators=50, outliers=64\n",
+            "contamination=0.02, n_estimators=100, outliers=64\n",
+            "contamination=0.02, n_estimators=150, outliers=63\n",
+            "contamination=0.03, n_estimators=50, outliers=94\n",
+            "contamination=0.03, n_estimators=100, outliers=96\n",
+            "contamination=0.03, n_estimators=150, outliers=96\n",
+            "contamination=0.04, n_estimators=50, outliers=128\n",
+            "contamination=0.04, n_estimators=100, outliers=114\n",
+            "contamination=0.04, n_estimators=150, outliers=118\n",
+            "contamination=0.05, n_estimators=50, outliers=145\n",
+            "contamination=0.05, n_estimators=100, outliers=156\n",
+            "contamination=0.05, n_estimators=150, outliers=156\n",
+            "contamination=0.06, n_estimators=50, outliers=176\n",
+            "contamination=0.06, n_estimators=100, outliers=192\n",
+            "contamination=0.06, n_estimators=150, outliers=192\n",
+            "contamination=0.07, n_estimators=50, outliers=224\n",
+            "contamination=0.07, n_estimators=100, outliers=209\n",
+            "contamination=0.07, n_estimators=150, outliers=207\n",
+            "contamination=0.08, n_estimators=50, outliers=255\n",
+            "contamination=0.08, n_estimators=100, outliers=255\n",
+            "contamination=0.08, n_estimators=150, outliers=255\n",
+            "contamination=0.09, n_estimators=50, outliers=287\n",
+            "contamination=0.09, n_estimators=100, outliers=258\n",
+            "contamination=0.09, n_estimators=150, outliers=264\n",
+            "contamination=0.10, n_estimators=50, outliers=288\n",
+            "contamination=0.10, n_estimators=100, outliers=288\n",
+            "contamination=0.10, n_estimators=150, outliers=294\n",
+            "contamination=0.11, n_estimators=50, outliers=349\n",
+            "contamination=0.11, n_estimators=100, outliers=341\n",
+            "contamination=0.11, n_estimators=150, outliers=349\n",
+            "contamination=0.12, n_estimators=50, outliers=349\n",
+            "contamination=0.12, n_estimators=100, outliers=368\n",
+            "contamination=0.12, n_estimators=150, outliers=383\n",
+            "contamination=0.13, n_estimators=50, outliers=412\n",
+            "contamination=0.13, n_estimators=100, outliers=414\n",
+            "contamination=0.13, n_estimators=150, outliers=409\n",
+            "contamination=0.14, n_estimators=50, outliers=433\n",
+            "contamination=0.14, n_estimators=100, outliers=445\n",
+            "contamination=0.14, n_estimators=150, outliers=431\n",
+            "contamination=0.15, n_estimators=50, outliers=433\n",
+            "contamination=0.15, n_estimators=100, outliers=462\n",
+            "contamination=0.15, n_estimators=150, outliers=459\n",
+            "contamination=0.16, n_estimators=50, outliers=509\n",
+            "contamination=0.16, n_estimators=100, outliers=462\n",
+            "contamination=0.16, n_estimators=150, outliers=459\n",
+            "contamination=0.17, n_estimators=50, outliers=530\n",
+            "contamination=0.17, n_estimators=100, outliers=541\n",
+            "contamination=0.17, n_estimators=150, outliers=540\n",
+            "contamination=0.18, n_estimators=50, outliers=530\n",
+            "contamination=0.18, n_estimators=100, outliers=541\n",
+            "contamination=0.18, n_estimators=150, outliers=544\n",
+            "contamination=0.19, n_estimators=50, outliers=583\n",
+            "contamination=0.19, n_estimators=100, outliers=598\n",
+            "contamination=0.19, n_estimators=150, outliers=593\n",
+            "\n",
+            "✅ بهترین پارامترها برای بیشترین نقاط پرت:\n",
+            "contamination = 0.19\n",
+            "n_estimators = 100\n",
+            "تعداد نقاط پرت شناسایی‌شده = 598\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
