--- a/pivoting.ipynb
+++ b/pivoting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,15 +323,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\pishva_r\\AppData\\Local\\Temp\\ipykernel_14816\\3563871945.py:52: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "C:\\Users\\pishva_r\\AppData\\Local\\Temp\\ipykernel_14816\\347181660.py:52: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  output_df = pd.concat([output_df, pd.DataFrame([row_data])], ignore_index=True)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ پردازش کامل شد، ستون date اضافه شد، و خروجی در فایل output.xlsx ذخیره شد.\n"
      ]
     }
    ],
@@ -340,7 +347,7 @@
     "import numpy as np\n",
     "\n",
     "# مرحله 1: خواندن فایل CSV\n",
-    "df = pd.read_csv('dsas11_blade_temp_9390_9407.csv')\n",
+    "df = pd.read_csv('dsas11_gen_brg_vib_9362_9367_9371_9372.csv')\n",
     "\n",
     "# مرحله 2: استخراج AssetIDهای یکتا\n",
     "unique_ids = df['AssetID'].unique().tolist()\n",
@@ -396,7 +403,7 @@
     "\n",
     "\n",
     "# ذخیره خروجی در فایل اکسل\n",
-    "output_df.to_excel('output.xlsx', index=False)\n",
+    "output_df.to_excel('output_gen_brg_vib_9362_9367_9371_9372.xlsx', index=False)\n",
     "\n",
     "print(\"✅ پردازش کامل شد، ستون date اضافه شد، و خروجی در فایل output.xlsx ذخیره شد.\")\n"
    ]
