--- a/main_trans_oil_temp_transformer.ipynb
+++ b/main_trans_oil_temp_transformer.ipynb
@@ -18,7 +18,7 @@
     "accelerator": "GPU",
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
-        "37793856d9724000bc9796e64b7df02a": {
+        "34791778a8c540e7a66c00bbfdd4f73a": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HBoxModel",
           "model_module_version": "1.5.0",
@@ -33,14 +33,14 @@
             "_view_name": "HBoxView",
             "box_style": "",
             "children": [
-              "IPY_MODEL_ee3ae17a481f486bb164ec0deb2c7321",
-              "IPY_MODEL_440323c179cd4ba8a4abe69db80914f1",
-              "IPY_MODEL_b4292277d68e4bbfba538fc2dbd5c1f9"
+              "IPY_MODEL_a6d9b84b74374583ab18c5471ef8c128",
+              "IPY_MODEL_7631430a5e004abe80e536010d363155",
+              "IPY_MODEL_cac08f8490f642499fd9f1046c65ec44"
             ],
-            "layout": "IPY_MODEL_88d85521b2d04e3fb71b5a2cd2db3696"
+            "layout": "IPY_MODEL_735966c0ec9840548ad168735ca15919"
           }
         },
-        "ee3ae17a481f486bb164ec0deb2c7321": {
+        "a6d9b84b74374583ab18c5471ef8c128": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "model_module_version": "1.5.0",
@@ -55,13 +55,13 @@
             "_view_name": "HTMLView",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_0f3a485a805b4c78970e84f2369191ee",
+            "layout": "IPY_MODEL_a81eae457f7e4883a8edee42b833c6af",
             "placeholder": "​",
-            "style": "IPY_MODEL_53f56ccd8eff4c61ab32c569a4ce366f",
+            "style": "IPY_MODEL_df3c0fbc944e407db321cdc1bbe6ccae",
             "value": "Epoch 99: 100%"
           }
         },
-        "440323c179cd4ba8a4abe69db80914f1": {
+        "7631430a5e004abe80e536010d363155": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "FloatProgressModel",
           "model_module_version": "1.5.0",
@@ -77,15 +77,15 @@
             "bar_style": "success",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_756c70f1414242b9af73af6e3dc7991f",
+            "layout": "IPY_MODEL_1e4f3797d1094316bf5939bf54bf6c77",
             "max": 65,
             "min": 0,
             "orientation": "horizontal",
-            "style": "IPY_MODEL_0a87a7afc23a4bcf98ecd882e5776199",
+            "style": "IPY_MODEL_db94aa6fe8af4c789a6f4a5f975e5004",
             "value": 65
           }
         },
-        "b4292277d68e4bbfba538fc2dbd5c1f9": {
+        "cac08f8490f642499fd9f1046c65ec44": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "model_module_version": "1.5.0",
@@ -100,13 +100,13 @@
             "_view_name": "HTMLView",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_5a29694932b34e8d8e2242b67cdbfa33",
+            "layout": "IPY_MODEL_aba4441ea28c4809adc62523176cb47b",
             "placeholder": "​",
-            "style": "IPY_MODEL_5eca4e1dce674eafb52f9c0556a0212f",
-            "value": " 65/65 [00:02&lt;00:00, 31.98it/s, train_loss=0.000848]"
+            "style": "IPY_MODEL_934c8aafad4a4b1699f7f45c69f9e191",
+            "value": " 65/65 [00:01&lt;00:00, 32.91it/s, train_loss=0.000848]"
           }
         },
-        "88d85521b2d04e3fb71b5a2cd2db3696": {
+        "735966c0ec9840548ad168735ca15919": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -158,7 +158,7 @@
             "width": "100%"
           }
         },
-        "0f3a485a805b4c78970e84f2369191ee": {
+        "a81eae457f7e4883a8edee42b833c6af": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -210,7 +210,7 @@
             "width": null
           }
         },
-        "53f56ccd8eff4c61ab32c569a4ce366f": {
+        "df3c0fbc944e407db321cdc1bbe6ccae": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
@@ -225,7 +225,7 @@
             "description_width": ""
           }
         },
-        "756c70f1414242b9af73af6e3dc7991f": {
+        "1e4f3797d1094316bf5939bf54bf6c77": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -277,7 +277,7 @@
             "width": null
           }
         },
-        "0a87a7afc23a4bcf98ecd882e5776199": {
+        "db94aa6fe8af4c789a6f4a5f975e5004": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ProgressStyleModel",
           "model_module_version": "1.5.0",
@@ -293,7 +293,7 @@
             "description_width": ""
           }
         },
-        "5a29694932b34e8d8e2242b67cdbfa33": {
+        "aba4441ea28c4809adc62523176cb47b": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -345,7 +345,7 @@
             "width": null
           }
         },
-        "5eca4e1dce674eafb52f9c0556a0212f": {
+        "934c8aafad4a4b1699f7f45c69f9e191": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
@@ -360,7 +360,7 @@
             "description_width": ""
           }
         },
-        "68c46cb94ea6441c9bc2168b9b2fed67": {
+        "a2c46b506e3d453b89cad60acecc685c": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HBoxModel",
           "model_module_version": "1.5.0",
@@ -375,14 +375,14 @@
             "_view_name": "HBoxView",
             "box_style": "",
             "children": [
-              "IPY_MODEL_2ab58d5deba244979de107eb8c9fca73",
-              "IPY_MODEL_8e93dbbd5100426c85b72a92eae669a4",
-              "IPY_MODEL_0c973bfd553e4bc9bf1b9b66f62193fe"
+              "IPY_MODEL_305a45ffd8f14cb1840e0cedc27d72b5",
+              "IPY_MODEL_112c15d7c4c8443199160910e0b4bcc7",
+              "IPY_MODEL_a0945ebf0260471b941d58f800fe1846"
             ],
-            "layout": "IPY_MODEL_8ade1b139c4c43d2a180d3e3a6284136"
+            "layout": "IPY_MODEL_dd04ca7b27774752b205993e54dfd8c1"
           }
         },
-        "2ab58d5deba244979de107eb8c9fca73": {
+        "305a45ffd8f14cb1840e0cedc27d72b5": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "model_module_version": "1.5.0",
@@ -397,13 +397,13 @@
             "_view_name": "HTMLView",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_e8c1c9d3b8d54a1290e83d2e9bae7813",
+            "layout": "IPY_MODEL_3ea05cbeed4e4df595faa2648a838046",
             "placeholder": "​",
-            "style": "IPY_MODEL_d8b28073047747c49d2a8ea691d23d9a",
+            "style": "IPY_MODEL_07fefec355294e4c951e1bd4968ff27b",
             "value": "Predicting DataLoader 0: 100%"
           }
         },
-        "8e93dbbd5100426c85b72a92eae669a4": {
+        "112c15d7c4c8443199160910e0b4bcc7": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "FloatProgressModel",
           "model_module_version": "1.5.0",
@@ -419,15 +419,15 @@
             "bar_style": "success",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_337e129ed78242b8ac8790afcd8e43cc",
+            "layout": "IPY_MODEL_42c364980d804c0d84d82a30ccffc973",
             "max": 1,
             "min": 0,
             "orientation": "horizontal",
-            "style": "IPY_MODEL_4e1242c03fa842ac97f07bc484c55c37",
+            "style": "IPY_MODEL_6fe08404a92247a99f9f14878a0c813d",
             "value": 1
           }
         },
-        "0c973bfd553e4bc9bf1b9b66f62193fe": {
+        "a0945ebf0260471b941d58f800fe1846": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "model_module_version": "1.5.0",
@@ -442,13 +442,13 @@
             "_view_name": "HTMLView",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_fa625fd17976423f80b29cc1b13cdf1a",
+            "layout": "IPY_MODEL_22c214790e3c40d7b438ff30824cccba",
             "placeholder": "​",
-            "style": "IPY_MODEL_cbd972161e1d450584e1cb08fcf7e0a9",
-            "value": " 1/1 [00:00&lt;00:00, 13.76it/s]"
+            "style": "IPY_MODEL_b88a4485b1b54d109ab176ea8b040dc2",
+            "value": " 1/1 [00:00&lt;00:00, 12.75it/s]"
           }
         },
-        "8ade1b139c4c43d2a180d3e3a6284136": {
+        "dd04ca7b27774752b205993e54dfd8c1": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -500,7 +500,7 @@
             "width": "100%"
           }
         },
-        "e8c1c9d3b8d54a1290e83d2e9bae7813": {
+        "3ea05cbeed4e4df595faa2648a838046": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -552,7 +552,7 @@
             "width": null
           }
         },
-        "d8b28073047747c49d2a8ea691d23d9a": {
+        "07fefec355294e4c951e1bd4968ff27b": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
@@ -567,7 +567,7 @@
             "description_width": ""
           }
         },
-        "337e129ed78242b8ac8790afcd8e43cc": {
+        "42c364980d804c0d84d82a30ccffc973": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -619,7 +619,7 @@
             "width": null
           }
         },
-        "4e1242c03fa842ac97f07bc484c55c37": {
+        "6fe08404a92247a99f9f14878a0c813d": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ProgressStyleModel",
           "model_module_version": "1.5.0",
@@ -635,7 +635,7 @@
             "description_width": ""
           }
         },
-        "fa625fd17976423f80b29cc1b13cdf1a": {
+        "22c214790e3c40d7b438ff30824cccba": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -687,7 +687,7 @@
             "width": null
           }
         },
-        "cbd972161e1d450584e1cb08fcf7e0a9": {
+        "b88a4485b1b54d109ab176ea8b040dc2": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
@@ -718,44 +718,45 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 185,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000,
           "referenced_widgets": [
-            "37793856d9724000bc9796e64b7df02a",
-            "ee3ae17a481f486bb164ec0deb2c7321",
-            "440323c179cd4ba8a4abe69db80914f1",
-            "b4292277d68e4bbfba538fc2dbd5c1f9",
-            "88d85521b2d04e3fb71b5a2cd2db3696",
-            "0f3a485a805b4c78970e84f2369191ee",
-            "53f56ccd8eff4c61ab32c569a4ce366f",
-            "756c70f1414242b9af73af6e3dc7991f",
-            "0a87a7afc23a4bcf98ecd882e5776199",
-            "5a29694932b34e8d8e2242b67cdbfa33",
-            "5eca4e1dce674eafb52f9c0556a0212f",
-            "68c46cb94ea6441c9bc2168b9b2fed67",
-            "2ab58d5deba244979de107eb8c9fca73",
-            "8e93dbbd5100426c85b72a92eae669a4",
-            "0c973bfd553e4bc9bf1b9b66f62193fe",
-            "8ade1b139c4c43d2a180d3e3a6284136",
-            "e8c1c9d3b8d54a1290e83d2e9bae7813",
-            "d8b28073047747c49d2a8ea691d23d9a",
-            "337e129ed78242b8ac8790afcd8e43cc",
-            "4e1242c03fa842ac97f07bc484c55c37",
-            "fa625fd17976423f80b29cc1b13cdf1a",
-            "cbd972161e1d450584e1cb08fcf7e0a9"
+            "34791778a8c540e7a66c00bbfdd4f73a",
+            "a6d9b84b74374583ab18c5471ef8c128",
+            "7631430a5e004abe80e536010d363155",
+            "cac08f8490f642499fd9f1046c65ec44",
+            "735966c0ec9840548ad168735ca15919",
+            "a81eae457f7e4883a8edee42b833c6af",
+            "df3c0fbc944e407db321cdc1bbe6ccae",
+            "1e4f3797d1094316bf5939bf54bf6c77",
+            "db94aa6fe8af4c789a6f4a5f975e5004",
+            "aba4441ea28c4809adc62523176cb47b",
+            "934c8aafad4a4b1699f7f45c69f9e191",
+            "a2c46b506e3d453b89cad60acecc685c",
+            "305a45ffd8f14cb1840e0cedc27d72b5",
+            "112c15d7c4c8443199160910e0b4bcc7",
+            "a0945ebf0260471b941d58f800fe1846",
+            "dd04ca7b27774752b205993e54dfd8c1",
+            "3ea05cbeed4e4df595faa2648a838046",
+            "07fefec355294e4c951e1bd4968ff27b",
+            "42c364980d804c0d84d82a30ccffc973",
+            "6fe08404a92247a99f9f14878a0c813d",
+            "22c214790e3c40d7b438ff30824cccba",
+            "b88a4485b1b54d109ab176ea8b040dc2"
           ]
         },
         "id": "ui4cJsziFNqu",
-        "outputId": "714918dc-280b-45db-e54f-4c2625866fd2"
+        "outputId": "6fb432b6-ac77-40f0-989d-87dcc82ac04f"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
+            "WARNING:darts.models:The StatsForecast module could not be imported. To enable support for the AutoARIMA, AutoETS and Croston models, please consider installing it.\n",
             "/tmp/ipython-input-1059165410.py:19: FutureWarning: 'H' is deprecated and will be removed in a future version, please use 'h' instead.\n",
             "  df_filtered = df_filtered.set_index('DateTime').resample('1H').mean()\n",
             "/usr/local/lib/python3.12/dist-packages/torch/nn/modules/transformer.py:392: UserWarning: enable_nested_tensor is True, but self.use_nested_tensor is False because encoder_layer.self_attn.batch_first was not True(use batch_first for better inference performance)\n",
@@ -794,7 +795,7 @@
             "application/vnd.jupyter.widget-view+json": {
               "version_major": 2,
               "version_minor": 0,
-              "model_id": "37793856d9724000bc9796e64b7df02a"
+              "model_id": "34791778a8c540e7a66c00bbfdd4f73a"
             }
           },
           "metadata": {}
@@ -820,7 +821,7 @@
             "application/vnd.jupyter.widget-view+json": {
               "version_major": 2,
               "version_minor": 0,
-              "model_id": "68c46cb94ea6441c9bc2168b9b2fed67"
+              "model_id": "a2c46b506e3d453b89cad60acecc685c"
             }
           },
           "metadata": {}
@@ -943,7 +944,7 @@
       "metadata": {
         "id": "VpxeIh4AFcSa"
       },
-      "execution_count": 186,
+      "execution_count": 4,
       "outputs": []
     }
   ]
